tests/neg/i9331.scala
package object Foo {
  (1: Any) match {
    case Foo => 1  // error
  }
}
